2007-02-13  Mickael Remond  <mickael.remond@process-one.net>

	* src/ejabberd_auth_ldap.erl: Added ldap_local_filter option. This
	option provide an optimisation to reduce LDAP directory load when
	using attribute-based filters.

2007-02-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Added separate version of
	element_to_string for HTML encoding
	* src/xml.erl: Reverted previous change

2007-02-04  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: &apos; entity replaced by &#39; Should work more
	universaly (in HTML and XML).

2007-01-30  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster_odbc.erl: Bugfix (thanks to asdx
	<asdx@jabber.snc.ru>)
	* src/ejd2odbc.erl: Likewise

2007-01-27  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_vcard_ldap.erl: LDAP server pool support (thanks to Evgeniy
	Khramtsov)
	* src/eldap/Makefile.in: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/eldap_pool.erl: Likewise

	* src/eldap/eldap_utils.erl: Implemented LDAP domain substitution

	* src/eldap/eldap.erl: Implemented queue to avoid bind deadlock under
	heavy load (thanks to Evgeniy Khramtsov)
	* src/eldap/eldap.hrl: Likewise

2007-01-26  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Fixed typos in labels.

2007-01-25  Mickael Remond  <mickael.remond@process-one.net>

	* src/eldap/Makefile.win32: fix build error on Windows.

2007-01-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/*: Plugin architecture for HTTP modules (thanks to
	Massimiliano Mirra)

2007-01-24  Mickael Remond  <mickael.remond@process-one.net>

	* doc/guide.tex: Documentation for the
	domain_balancing_component_number option.

	* doc/guide.tex: Documentation for domain balancing.

	* doc/guide.tex: mod_muc now supports cluster.

	* doc/guide.tex: Updated the max_user_sessions section. 

2007-01-19  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc.erl: Now mod_muc can be distributed on
	several nodes