@@ -1,3 +1,8 @@
+2007-02-13  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_muc/mod_muc.erl: Clean online room table on cluster node
+	restart
+
 2007-02-13  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/ejabberd_auth_ldap.erl: Added ldap_local_filter option. This
